# WANDA-Converters

./: .gitignore  README.md
pipeline-conversion/: .clang-format  CMakeLists.txt  README.md
pipeline-conversion/app/: CMakeLists.txt  main.cpp
pipeline-conversion/docs/: index.rst
pipeline-conversion/libs/debug/: Deltares.Wanda.lib
pipeline-conversion/libs/include/: Wanda_windows.h  Wandagraph.h  deltares_helper_functions.h  diagram_text_box.h  license_manager.h  nefis_file.h  wanda_diagram_lines.h  wanda_item.h  wanda_license.h  wanda_table.h  wandacomponent.h  wandadef.h  wandagraphmapper.h  wandamodel.h  wandanode.h  wandaproperty.h  wandasigline.h
pipeline-conversion/libs/include/CXXGraph/: version.h
pipeline-conversion/src/: CMakeLists.txt  model_converter.cpp  model_converter.h
pipeline-conversion/src/builders/: CMakeLists.txt  wanda_model_builder.h
pipeline-conversion/src/core/: CMakeLists.txt  coordinates.h  network.h  node.h  pipe.h  reservoir.h  typedef.h  valve.h
pipeline-conversion/src/descriptors/: CMakeLists.txt  wanda_pipe_descriptor.h
pipeline-conversion/src/mapping/: CMakeLists.txt  mapper_base.h
pipeline-conversion/src/mapping/from_epanet/: epanet_model_importer.cpp  epanet_model_importer.h  epanet_node_importer.cpp  epanet_node_importer.h  epanet_pipe_importer.cpp  epanet_pipe_importer.h  epanet_reservoir_importer.cpp  epanet_reservoir_importer.h  epanet_unit_converter.cpp  epanet_unit_converter.h  epanet_valve_importer.cpp  epanet_valve_importer.h  utility.cpp  utility.h
pipeline-conversion/src/mapping/from_wanda/: wanda_model_importer.cpp  wanda_model_importer.h  wanda_node_importer.cpp  wanda_node_importer.h  wanda_pipe_importer.cpp  wanda_pipe_importer.h  wanda_pipe_to_entity_mapper.cpp  wanda_pipe_to_entity_mapper.h
pipeline-conversion/src/mapping/to_wanda/: wanda_model_builder.cpp  wanda_model_builder.h  wanda_model_exporter.cpp  wanda_model_exporter.h
pipeline-conversion/src/utils/: CMakeLists.txt  unit_converter.h
pipeline-conversion/test_data/: Sewage_transient.rtf  Sewage_transient.wdi  Sewage_transient.wdo  Sewage_transient.wdx  Sewage_transient_new.wdi  epanet_3.wdi  epanet_3.wdx  epanet_4.wdi  epanet_5.wdi  epanet_7.wdi  epanet_7.wdx  epanet_8.wdi  epanet_8.wdx  test2_res.inp  test_model.inp  test_model.net  testfluid.ptf
pipeline-conversion/test_data/gis/: GPKG_Wanda (30-04-2026).7z
pipeline-conversion/tests/: CMakeLists.txt  test_core.cpp  test_epanet_importers.cpp  test_epanet_unit_converter.cpp  test_export.cpp  test_model_converter.cpp  test_smoke.cpp
